{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 1361,
  "lineage": "513a14d2-3ae8-9f45-3903-c6e99d793fbb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "rag_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098147dce676c8fed",
            "arn": "arn:aws:ec2:ap-northeast-2:346299179356:elastic-ip/eipalloc-098147dce676c8fed",
            "domain": "vpc",
            "id": "eipalloc-098147dce676c8fed",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-39-171-2.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.171.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "rag-llamaindex-eip"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-eip",
              "Project": "rag-llamaindex"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rag_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09bcb8a5a42345e92",
            "arn": "arn:aws:ec2:ap-northeast-2:346299179356:instance/i-0ee30deea906b7346",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee30deea906b7346",
            "instance_initiated_shutdown_behavior": "terminate",
            "instance_lifecycle": "spot",
            "instance_market_options": [
              {
                "market_type": "spot",
                "spot_options": [
                  {
                    "instance_interruption_behavior": "terminate",
                    "max_price": "0.200000",
                    "spot_instance_type": "one-time"
                  }
                ]
              }
            ],
            "instance_state": "running",
            "instance_type": "g5g.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "rag-llamaindex-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0abe824e28e81d7bd",
            "private_dns": "ip-10-0-1-114.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.114",
            "public_dns": "ec2-3-35-214-217.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.214.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:346299179356:key/8b6fee86-5871-4042-b762-f558e900ee89",
                "tags_all": {
                  "Environment": "prod",
                  "Project": "rag-llamaindex"
                },
                "throughput": 125,
                "volume_id": "vol-090f565194f654565",
                "volume_size": 120,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "spot_instance_request_id": "sir-5347gyag",
            "subnet_id": "subnet-09013bcacb1d0d5bf",
            "tags": {
              "Environment": "prod",
              "Name": "rag-llamaindex-server"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-server",
              "Project": "rag-llamaindex"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007dc63ccaef9c582"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.rag_api",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ssm_parameter.dlami_arm64"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346299179356:internet-gateway/igw-0cc51e32eb36f08c6",
            "id": "igw-0cc51e32eb36f08c6",
            "owner_id": "346299179356",
            "tags": {
              "Name": "rag-llamaindex-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-igw",
              "Project": "rag-llamaindex"
            },
            "vpc_id": "vpc-04a021550bc55d18c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346299179356:route-table/rtb-02382ee4ee43c80c9",
            "id": "rtb-02382ee4ee43c80c9",
            "owner_id": "346299179356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc51e32eb36f08c6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rag-llamaindex-rt-public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-rt-public",
              "Project": "rag-llamaindex"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a021550bc55d18c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073d3b1206c84f3ef",
            "route_table_id": "rtb-02382ee4ee43c80c9",
            "subnet_id": "subnet-09013bcacb1d0d5bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rag_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346299179356:security-group/sg-007dc63ccaef9c582",
            "description": "Security group for RAG LlamaIndex API",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007dc63ccaef9c582",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Alt",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ollama",
                "from_port": 11434,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11434
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RAG API",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rag-llamaindex-sg",
            "name_prefix": "",
            "owner_id": "346299179356",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rag-llamaindex-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-sg",
              "Project": "rag-llamaindex"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a021550bc55d18c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346299179356:subnet/subnet-09013bcacb1d0d5bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09013bcacb1d0d5bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "346299179356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rag-llamaindex-subnet-public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-subnet-public",
              "Project": "rag-llamaindex"
            },
            "vpc_id": "vpc-04a021550bc55d18c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346299179356:vpc/vpc-04a021550bc55d18c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03180406c7b3a79d1",
            "default_route_table_id": "rtb-0dd377ab73c189128",
            "default_security_group_id": "sg-0701f312680b29322",
            "dhcp_options_id": "dopt-0f709d810ea565631",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a021550bc55d18c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd377ab73c189128",
            "owner_id": "346299179356",
            "tags": {
              "Name": "rag-llamaindex-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-vpc",
              "Project": "rag-llamaindex"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}